# aoc2021

./: Cargo.toml
src/: day01.rs  day02.rs  day03.rs  day04.rs  main.rs
