[package]
name = "aoc2021"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bitvec = "0.22.3"
enum-map = "1.1.1"
euclid = "0.22.6"
itertools = "0.10.3"
nom = "7.1.0"
nom-bitvec = "0.2.0"
